--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 # Archivos sensibles
 .env
+*.env
 *.key
 *.pem
 *.crt
 *.secret
+*.token
+secrets.json
 config/*.json
+.git
 
 # Archivos temporales
 __pycache__/
