--- a/AWS/Dockerfiles/frontend-docker-compose.yml
+++ b/AWS/Dockerfiles/frontend-docker-compose.yml
@@ -2,9 +2,7 @@ version: "3.9"
 
 services:
   frontend:
-    build:
-      context: .
-      dockerfile: frontend/FE.Dockerfile
+    image: saurio96/frontend
     container_name: frontend
     ports:
       - "80:80"
