--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -75,17 +75,17 @@ jobs:
           terraform_version: 1.9.8
 
       - name: Terraform Init
-        run: terraform -chdir=AWS/terraform init
+        run: terraform -chdir=AWS/. init
 
       - name: Terraform Apply
-        run: terraform -chdir=AWS/terraform apply -auto-approve
+        run: terraform -chdir=AWS/. apply -auto-approve
 
       - name: Get EC2 IP from outputs
         id: tf_output
         run: |
-          IP=$(terraform -chdir=AWS/terraform output -raw instance_IP_FE)
+          IP=$(terraform -chdir=AWS/. output -raw instance_IP_FE)
           echo "EC2_IP_FE=$IP" >> $GITHUB_ENV
-          IP=$(terraform -chdir=AWS/terraform output -raw instance_IP_BE)
+          IP=$(terraform -chdir=AWS/. output -raw instance_IP_BE)
           echo "EC2_IP_BE=$IP" >> $GITHUB_ENV
 
   deploy-to-ec2-FE:
