--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -106,7 +106,7 @@ jobs:
               terraform -chdir=AWS output -raw private_key > private_key.pem
               chmod 600 private_key.pem
               echo "PRIVATE_KEY<<EOF" >> $GITHUB_ENV
-              $(cat private_key.pem) >> $GITHUB_ENV
+              cat private_key.pem >> $GITHUB_ENV
               echo "EOF" >> $GITHUB_ENV
 
                
