--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -104,7 +104,7 @@ jobs:
               echo "fe_ip=$FE_IP" >> $GITHUB_OUTPUT
               echo "be_ip=$BE_IP" >> $GITHUB_OUTPUT
               PRIVATE_KEY=$(terraform -chdir=AWS output -raw private_key)
-              echo $PRIVATE_KEY >> env.PRIVATE_KEY
+              echo "::add-mask::$PRIVATE_KEY"
               echo "private_key<<EOF" >> $GITHUB_OUTPUT
               echo "$PRIVATE_KEY" >> $GITHUB_OUTPUT
               echo "EOF" >> $GITHUB_OUTPUT
@@ -112,31 +112,31 @@ jobs:
               
 
   deploy-to-ec2-FE:
-    runs-on: ubuntu-latest
-    needs: terraform
-
-    steps:
-      - uses: appleboy/ssh-action@v1.1.0
-        with:
-          host: ${{ needs.terraform.outputs.fe_ip }}
-          username: ubuntu
-          key: ${{ env.PRIVATE_KEY }}
-          script: |
-            cd /home/ubuntu/app
-            docker compose pull
-            docker compose up -d --remove-orphans
-
+      runs-on: ubuntu-latest
+      needs: terraform
+  
+      steps:
+        - uses: appleboy/ssh-action@v1.1.0
+          with:
+            host: ${{ needs.terraform.outputs.fe_ip }}
+            username: ubuntu
+            key: ${{ needs.terraform.outputs.private_key }}
+            script: |
+              cd /home/ubuntu/app
+              docker compose pull
+              docker compose up -d --remove-orphans
+  
   deploy-to-ec2-BE:
-    runs-on: ubuntu-latest
-    needs: terraform
-
-    steps:
-      - uses: appleboy/ssh-action@v1.1.0
-        with:
-          host: ${{ needs.terraform.outputs.be_ip }}
-          username: ubuntu
-          key: ${{ env.PRIVATE_KEY }}
-          script: |
-            cd /home/ubuntu/app
-            docker compose pull
-            docker compose up -d --remove-orphans
+      runs-on: ubuntu-latest
+      needs: terraform
+  
+      steps:
+        - uses: appleboy/ssh-action@v1.1.0
+          with:
+            host: ${{ needs.terraform.outputs.be_ip }}
+            username: ubuntu
+            key: ${{ needs.terraform.outputs.private_key }}
+            script: |
+              cd /home/ubuntu/app
+              docker compose pull
+              docker compose up -d --remove-orphans
