--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -104,10 +104,10 @@ jobs:
               echo "fe_ip=$FE_IP" >> $GITHUB_OUTPUT
               echo "be_ip=$BE_IP" >> $GITHUB_OUTPUT
               PRIVATE_KEY=$(terraform -chdir=AWS output -raw private_key_openssh)
-#              echo "::add-mask::$PRIVATE_KEY"
-#              echo "private_key<<EOF" >> $GITHUB_OUTPUT
-#              echo "$PRIVATE_KEY" >> $GITHUB_OUTPUT
-#              echo "EOF" >> $GITHUB_OUTPUT
+              echo "::add-mask::$PRIVATE_KEY"
+              echo "private_key<<EOF" >> $GITHUB_OUTPUT
+              echo "$PRIVATE_KEY" >> $GITHUB_OUTPUT
+              echo "EOF" >> $GITHUB_OUTPUT
 
               
 
