--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -64,78 +64,80 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
 
   terraform:
-    name: Apply Terraform
-    runs-on: ubuntu-latest
-    outputs:
-      fe_ip: ${{ steps.outputs.outputs.fe_ip }}
-      be_ip: ${{ steps.outputs.outputs.be_ip }}
-      private_key: ${{ steps.outputs.outputs.private_key }}
-      
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: hashicorp/setup-terraform@v3
-      
-      - name: Configure Terraform Cloud credentials
-        run: |
-          mkdir -p $HOME
-          cat <<EOF > $HOME/.terraformrc
-          credentials "app.terraform.io" {
-            token = "${{ secrets.TF_TOKEN }}"
-          }
-          EOF
-          
-      - name: Terraform Init
-        run: terraform -chdir=AWS/ init
-
-      - name: Set SSH env
-        run: |
-              echo "$BE_IP" >> $GITHUB_ENV
-              echo "$PRIVATE_KEY" >> $GITHUB_ENV
-              
-      - name: Terraform Apply
-        run: terraform -chdir=AWS/ apply -auto-approve
-
-      - name: Read outputs
-        id: outputs
-        run: |
-              FE_IP=$(terraform -chdir=AWS output -raw instance_IP_FE)
-              BE_IP=$(terraform -chdir=AWS output -raw instance_IP_BE)
-              echo "fe_ip=$FE_IP" >> $GITHUB_OUTPUT
-              echo "be_ip=$BE_IP" >> $GITHUB_OUTPUT
-              PRIVATE_KEY=$(terraform -chdir=AWS output -raw private_key)
-              #echo "::add-mask::$PRIVATE_KEY"
-              echo "private_key<<EOF" >> $GITHUB_OUTPUT
-              echo "$PRIVATE_KEY" >> $GITHUB_OUTPUT
-              echo "EOF" >> $GITHUB_OUTPUT
-              echo "CLAVE" $private_key
-
+      name: Apply Terraform
+      runs-on: ubuntu-latest
+      # 1. SALIDAS: Definimos qué variables salen de este job
+      outputs:
+        fe_ip: ${{ steps.extraer.outputs.fe_ip }}
+        be_ip: ${{ steps.extraer.outputs.be_ip }}
+        aws_key: ${{ steps.extraer.outputs.aws_key }} # <--- La clave saldrá por aquí
+        
+      steps:
+        - uses: actions/checkout@v4
+  
+        - uses: hashicorp/setup-terraform@v3
+          with:
+            terraform_wrapper: false # Obligatorio para leer el texto limpio
+  
+        - name: Configure Terraform Cloud credentials
+          run: |
+            mkdir -p $HOME
+            cat <<EOF > $HOME/.terraformrc
+            credentials "app.terraform.io" {
+              token = "${{ secrets.TF_TOKEN }}"
+            }
+            EOF
+            
+        - name: Terraform Init
+          run: terraform -chdir=AWS/ init
+  
+        - name: Terraform Apply
+          run: terraform -chdir=AWS/ apply -auto-approve
+  
+        - name: Read outputs
+          id: extraer  # <--- ID importante
+          run: |
+                # Capturar IPs
+                FE_IP=$(terraform -chdir=AWS output -raw instance_IP_FE)
+                BE_IP=$(terraform -chdir=AWS output -raw instance_IP_BE)
+                echo "fe_ip=$FE_IP" >> $GITHUB_OUTPUT
+                echo "be_ip=$BE_IP" >> $GITHUB_OUTPUT
+  
+                # Capturar Clave (Usamos la salida 'private_key' de terraform)
+                RAW_KEY=$(terraform -chdir=AWS output -raw private_key)
+                
+                # Guardar en GITHUB_OUTPUT con el nombre 'aws_key'
+                # Usamos sintaxis multilinea obligatoria
+                echo "aws_key<<EOF" >> $GITHUB_OUTPUT
+                echo "$RAW_KEY" >> $GITHUB_OUTPUT
+                echo "EOF" >> $GITHUB_OUTPUT
+  
   deploy-to-ec2-FE:
-      runs-on: ubuntu-latest
-      needs: terraform
-  
-      steps:
-        - uses: appleboy/ssh-action@v1
-          with:
-            host: ${{ needs.terraform.outputs.fe_ip }}
-            username: ubuntu
-            key_path: "./terraform-key.pem"
-            script: |
-              cd /home/ubuntu/app
-              docker compose pull
-              docker compose up -d --remove-orphans
-  
+        runs-on: ubuntu-latest
+        needs: terraform
+        steps:
+          - uses: appleboy/ssh-action@v1.0.3
+            with:
+              host: ${{ needs.terraform.outputs.fe_ip }}
+              username: ubuntu
+              # 2. CORRECCIÓN: Usamos 'key' (texto) y la variable que sacamos arriba
+              key: ${{ needs.terraform.outputs.aws_key }}
+              script: |
+                cd /home/ubuntu/app
+                docker compose pull
+                docker compose up -d --remove-orphans
+     
   deploy-to-ec2-BE:
-      runs-on: ubuntu-latest
-      needs: terraform
-  
-      steps:
-        - uses: appleboy/ssh-action@v1
-          with:
-            host: ${{ needs.terraform.outputs.be_ip }}
-            username: ubuntu
-            key_path: "./terraform-key.pem"
-            script: |
-              cd /home/ubuntu/app
-              docker compose pull
-              docker compose up -d --remove-orphans
+        runs-on: ubuntu-latest
+        needs: terraform
+        steps:
+          - uses: appleboy/ssh-action@v1.0.3
+            with:
+              host: ${{ needs.terraform.outputs.be_ip }}
+              username: ubuntu
+              # 2. CORRECCIÓN: Usamos 'key' (texto) y la variable que sacamos arriba
+              key: ${{ needs.terraform.outputs.aws_key }}
+              script: |
+                cd /home/ubuntu/app
+                docker compose pull
+                docker compose up -d --remove-orphans
