--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -102,12 +102,9 @@ jobs:
                 BE_IP=$(terraform -chdir=AWS output -raw instance_IP_BE)
                 echo "fe_ip=$FE_IP" >> $GITHUB_OUTPUT
                 echo "be_ip=$BE_IP" >> $GITHUB_OUTPUT
-  
-                # Capturar Clave (Usamos la salida 'private_key' de terraform)
-                RAW_KEY=$(terraform -chdir=AWS output -raw private_key)
                 
-                # Guardar en GITHUB_OUTPUT con el nombre 'aws_key'
-                # Usamos sintaxis multilinea obligatoria
+                RAW_KEY=$(terraform -chdir=AWS output -raw private_key)
+
                 echo "aws_key<<EOF" >> $GITHUB_OUTPUT
                 echo "$RAW_KEY" >> $GITHUB_OUTPUT
                 echo "EOF" >> $GITHUB_OUTPUT
@@ -116,15 +113,22 @@ jobs:
         runs-on: ubuntu-latest
         needs: terraform
         steps:
+          - uses: actions/checkout@v4
+          - name: Copy docker-compose file to server
+            uses: appleboy/scp-action@v0.1.7
+            with:
+              host: ${{ needs.terraform.outputs.fe_ip }}
+              username: ubuntu
+              key: ${{ needs.terraform.outputs.aws_key }}
+              source: "AWS/Dockerfiles/frontend-docker-compose.yml"
+              target: "/home/ubuntu/app"
+              
           - uses: appleboy/ssh-action@v1.0.3
             with:
               host: ${{ needs.terraform.outputs.fe_ip }}
               username: ubuntu
-              # 2. CORRECCIÓN: Usamos 'key' (texto) y la variable que sacamos arriba
               key: ${{ needs.terraform.outputs.aws_key }}
               script: |
-                sudo apt-get update
-                sudo apt-get install -y docker-compose-plugin
                 cd /home/ubuntu/app
                 docker-compose pull
                 docker-compose up -d --remove-orphans
@@ -133,15 +137,22 @@ jobs:
         runs-on: ubuntu-latest
         needs: terraform
         steps:
+          - uses: actions/checkout@v4
+          - name: Copy docker-compose file to server
+            uses: appleboy/scp-action@v0.1.7
+            with:
+              host: ${{ needs.terraform.outputs.fe_ip }}
+              username: ubuntu
+              key: ${{ needs.terraform.outputs.aws_key }}
+              source: "AWS/Dockerfiles/backend-docker-compose.yml"
+              target: "/home/ubuntu/app"
+              
           - uses: appleboy/ssh-action@v1.0.3
             with:
               host: ${{ needs.terraform.outputs.be_ip }}
               username: ubuntu
-              # 2. CORRECCIÓN: Usamos 'key' (texto) y la variable que sacamos arriba
               key: ${{ needs.terraform.outputs.aws_key }}
               script: |
-                sudo apt-get update
-                sudo apt-get install -y docker-compose-plugin
                 cd /home/ubuntu/app
                 docker-compose pull
                 docker-compose up -d --remove-orphans
